--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,4 +21,4 @@ jobs:
       - name: format
         run: terraform fmt -check
       - name: plan
-        run: terraform plan
+        run: terraform planS
