Contributing-to: https://kennedymakhanu1.atlassian.net/browse/CLD-9

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,4 +21,4 @@ jobs:
       - name: format
         run: terraform fmt -check
       - name: plan
-        run: terraform planS
+        run: terraform plan
