configure repository ssh and rearrange for terraform workflows

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,3 +22,5 @@ jobs:
         run: terraform fmt -check
       - name: plan
         run: terraform plan
+      - name: apply
+        run: terraform apply -auto-approve
