--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           terraform_version: 1.1.9
       - name: Initialize
-        run: terraform init
+        run: |
+             eval `ssh-agent -s`
+             ssh-add - <<< ${{ secrets.TERRAFORM_WORKFLOWS }}
       - name: validate
         run: terraform validate
       - name: format
