--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,3 +25,5 @@ jobs:
         run: terraform fmt -check
       - name: plan
         run: terraform plan
+      - name: apply
+        run: terraform apply -auto-approve
