--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,29 +1,19 @@
-name: "Terraform"
+name: oidc
+on:
+  workflow_dispatch:
 
-on: [push]
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY}}
+permissions:
+  id-token: write
+  pull-requests: write
+  statuses: write
+  actions: read
+  contents: read
+
 jobs:
-  terraform:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.1.9
-      - name: Initialize
-        run: |
-             eval `ssh-agent -s`
-             echo "${{ secrets.TERRAFORM_WORKFLOWS }}" | ssh-add -
-             terraform init
-      - name: validate
-        run: terraform validate
-      - name: format
-        run: terraform fmt -check
-      - name: plan
-        run: terraform plan
-      - name: apply
-        run: terraform apply -auto-approve
+  call-eks-workflow:
+    uses: ./.github/workflows/deploy.yaml
+    with:
+      work-dir: "./"
+      aws-region: "us-east-1"
+    secrets:
+      CI_ROLE: ${{ secrets.CI_ROLE }}
