--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,3 +17,4 @@ jobs:
       aws-region: "us-east-1"
     secrets:
       CI_ROLE: ${{ secrets.CI_ROLE }}
+      SSH_KEY_GITHUB_ACTIONS: ${{ secrets.SSH_KEY_GITHUB_ACTIONS  }}
