--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
         run: terraform fmt -check
       - name: init
         run: |
-          eval "$(ssh-agent -s)"
-          ssh-add - <<< '${{ secrets.TERRAFORM_WORKFLOW}}'
+          eval $(ssh-agent -s)
+          echo "$TERRAFORM_WORKFLOW" | ssh-add -
           terraform init
       - name: Validate
         run: terraform validate
