--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,8 @@ jobs:
         run: terraform fmt -check
       - name: init
         run: |
-          ssh-add -l
+          eval $(ssh-agent -l)
+          eval $(ssh-agent -k)
           eval $(ssh-agent -s)
           echo "$TERRAFORM_WORKFLOW" | ssh-add -
           terraform init
