--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -17,4 +17,4 @@ jobs:
       aws-region: "us-east-1"
     secrets:
       CI_ROLE: ${{ secrets.CI_ROLE }}
-      SSH_KEY_GITHUB_ACTIONS: ${{ secrets.SSH_KEY_GITHUB_ACTIONS  }}
+      TERRAFORM_WORKFLOW: ${{ secrets.TERRAFORM_WORKFLOW  }}
