--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,9 @@ jobs:
         run: terraform fmt -check
       - name: init
         run: |
-          eval `ssh-agent -s`
-          echo "SSH_AGENT_PID=$SSH_AGENT_PID" >> $GITHUB_ENV
-          echo "$TERRAFORM_WORKFLOW" | base64 -d | ssh-add -
-          terraform init
+             eval `ssh-agent -s`
+             echo "${{ secrets.TERRAFORM_WORKFLOWS }}" | ssh-add -
+             terraform init
       - name: Validate
         run: terraform validate
       - name: Plan
