--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
       CI_ROLE:
         required: true
       TERRAFORM_WORKFLOW:
-        required: true
+        required: false
 
 jobs:
   Infra-deploy:
