--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  call-vpc-workflow:
+  call-s3-workflow:
     uses: ./.github/workflows/deploy.yml
     with:
       work-dir: "./s3-module"
