--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
       CI_ROLE:
         required: true
       TERRAFORM_WORKFLOW:
-        required: false
+        required: true
 
 jobs:
   Infra-deploy:
@@ -33,10 +33,10 @@ jobs:
       - name: Terraform format
         run: terraform fmt -check
       - name: init
-        run: terraform init
-#   eval `ssh-agent -s`
-#   echo "${{ secrets.TERRAFORM_WORKFLOWS }}" | ssh-add -
-             
+        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add - <<< "${{secrets.TERRAFORM_WORKFLOW}}"
+          terraform init  
       - name: Validate
         run: terraform validate
       - name: Plan
