--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: terraform fmt -check
       - name: init
         run: |
-          eval "$(ssh-agent -s)"
+          eval `ssh-agent -s)`
           echo "${{ secrets.TERRAFORM_WORKFLOW }}" | ssh-add -
           terraform init  
       - name: Validate
