--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -13,7 +13,7 @@ jobs:
   call-s3-workflow:
     uses: ./.github/workflows/deploy.yml
     with:
-      work-dir: "./s3-module"
+      work-dir: "./environments/s3-module"
       aws-region: "us-east-1"
     secrets:
       CI_ROLE: ${{ secrets.CI_ROLE }}
