--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,5 +41,5 @@ jobs:
         run:  terraform validate
       - name: Plan
         run:  terraform plan
-     # - name: Apply
-       # run: terraform apply -auto-approve
+      - name: Apply
+        run: terraform apply -auto-approve
