use data source to read vpc_id

--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  call-s3-workflow:
+  call-ec2-workflow:
     uses: ./.github/workflows/deploy.yml
     with:
       work-dir: "./environments/ec2-module"
