--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,5 @@ jobs:
         run:  terraform plan
       - name: Apply
         run: terraform apply -auto-approve
-     # - name: destroy resources
-     #   run: terraform destroy -auto-approve
+      - name: destroy resources
+        run: terraform destroy -auto-approve
